-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.6.0
-
None
-
e4f9d21d2879fcbf68331de8099e00aca08649e4
When I try to format code with clang-format I got this message:
Error in Beautifier: /usr/bin/clang-format-3.6: YAML:1:2: error: Map key must be a scalar {IndentWidth: 4ColumnLimit: 120} ^
Seems this patch fixes this issue - http://pastebin.com/m0EWcqZV