Beautifier: Fix format for clang-format's command line style parameter

clang-format uses YAML for its configuration file. Thus the content has
to be properly reformated when used in a single line as command line
argument.

Task-number: QTCREATORBUG-15604
Change-Id: I867caf7ccb1f2f396677e2d0cd5335e5255e03ea
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>